--- a/John Smilga-React/Section-2-Install-create-react-app/tutorial/src/index.css
+++ b/John Smilga-React/Section-2-Install-create-react-app/tutorial/src/index.css
@@ -1,13 +1,61 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: #e9e8ee;
+  color: rgb(56, 56, 56);
 }
+
+.booklist{
+  width:90vw;
+  max-width: 1170px;
+  margin: 5rem auto;
+  display: grid;
+  gap: 2rem;
+}
+
+img {
+  width: 150px;
+  height: 200px;
+  border-radius: 0.4rem;
+}
+
+@media screen and (min-width:768px){
+  .booklist {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.book{
+  background: #fcfbfd;
+  border-radius: 1rem;
+  padding: 1.5rem 2.3rem;
+  box-shadow: 10px 10px 20px #b5b2b2;
+}
+
+.book h1{
+  margin-top: 0.7rem;
+}
+/* before change:
+.book h4{
+  margin-top: 0.1rem;
+  color: rgb(98, 97, 97);
+  font-weight: 400;
+  letter-spacing: 1px;
+} */
+
+/* after change*/
+.book h4{
+  margin-top: 0.1rem;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color:#617d98;
+  font-size:0.75rem;
+  margin:0.25rem;
+} 
+
+/*if the library have styles- they will override this css*/
