--- a/John Smilga-React/Section-5-Basic-Projects/react-projects-master/20-dark-mode/setup/src/index.css
+++ b/John Smilga-React/Section-5-Basic-Projects/react-projects-master/20-dark-mode/setup/src/index.css
@@ -4,10 +4,22 @@ Global Styles
 ===============
 */
 
-:root {
+/* :root {
   --clr-bcg: #fff;
   --clr-font: #282c35;
   --clr-primary: #d23669;
+} */
+
+.dark-theme{
+  --clr-bcg: rgb(38, 39, 40);
+  --clr-font: #e4e9ec;
+  --clr-primary: #aa11d4;
+}
+
+.light-theme{
+  --clr-bcg: rgb(235, 239, 240);
+  --clr-font: #494f53;
+  --clr-primary: #dc9b18;
 }
 
 *,
