second chart start

--- a/John Smilga-React/01-Project-starter-project-react-github-search-users/src/index.css
+++ b/John Smilga-React/01-Project-starter-project-react-github-search-users/src/index.css
@@ -59,6 +59,13 @@ Global Styles
 ===============
 */
 
+/* this works in FF only:*/
+
+html {
+  scrollbar-color: var(--clr-grey-3) #eee;
+  scrollbar-width: thin;
+}
+
 *,
 ::after,
 ::before {
